[gd_scene load_steps=5 format=3 uid="uid://dashfxgddwaoh"]

[ext_resource type="Script" path="res://player/scripts/player.gd" id="1_ey7ph"]
[ext_resource type="Texture2D" uid="uid://boxobx60ijmqm" path="res://char_iris_full.png" id="2_bgsax"]
[ext_resource type="Script" path="res://Grapple-Hook/scripts/grapple_controller.gd" id="3_6gqpa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lisxu"]
radius = 33.0
height = 102.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 18
script = ExtResource("1_ey7ph")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_bgsax")
hframes = 16
vframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CapsuleShape2D_lisxu")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_speed = 3.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 1.0
drag_vertical_offset = -1.0

[node name="GrappleController" type="Node2D" parent="."]
script = ExtResource("3_6gqpa")
stiffness = 35.0

[node name="RayCast2D" type="RayCast2D" parent="GrappleController"]
target_position = Vector2(800, 0)
collision_mask = 16

[node name="Line2D" type="Line2D" parent="GrappleController"]
points = PackedVector2Array(0, 0, 0, 0)

[node name="grapple_cooldown" type="Timer" parent="GrappleController"]
wait_time = 0.75

[node name="grapple_timer" type="Timer" parent="GrappleController"]
wait_time = 3.0

[node name="Dash" type="Node2D" parent="."]

[node name="dash_timer" type="Timer" parent="Dash"]
wait_time = 0.25

[node name="dash_cooldown" type="Timer" parent="Dash"]
wait_time = 1.5

[connection signal="timeout" from="GrappleController/grapple_cooldown" to="GrappleController" method="_on_grapple_cooldown_timeout"]
[connection signal="timeout" from="GrappleController/grapple_timer" to="GrappleController" method="_on_grapple_timer_timeout"]
[connection signal="timeout" from="Dash/dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Dash/dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="Dash/dash_cooldown" to="." method="_on_dash_timer_timeout"]
